<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="CoE_FOE_Ctrl_typ" Id="{9e18ae58-98e8-06b8-0b77-b86d4045d632}">
    <Declaration><![CDATA[TYPE CoE_FOE_Ctrl_typ :
STRUCT
	Version_From_Drive:       UDINT; 
	fbEcFoeLoad_0:				FB_EcFoeLoad;
 
	fbFileOpen:					FB_FileOpen;
	fbFileClose:				FB_FileClose;	
	Foe_File_Path:				T_MaxString;
	
	hFile: 						UINT;            
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>